appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Pengaturan"
- tapOn:
    point: "919,889"
- waitForAnimationToEnd
- takeScreenshot: qa-darkmode-01-settings
- tapOn: "Beranda"
- takeScreenshot: qa-darkmode-02-home
- tapOn: "Dompet"
- takeScreenshot: qa-darkmode-03-wallet
